# cppframe

./: .gitignore  CMakeLists.txt  README.md  license
lib/: CMakeLists.txt  README
lib/jahan/: CMakeLists.txt  helper.hpp  object_container.hpp
lib/jahan/concurrency/: thread_pool.hpp
lib/jahan/db/: CMakeLists.txt  _mariadb.hpp  core.hpp  mariadb.cpp  mariadb.h  param.hpp
lib/jahan/dev/: benchmarkmemory.hpp  benchmarktimer.hpp  macro.hpp
lib/jahan/file/: CMakeLists.txt  config.hpp  logger.cpp  logger.h
lib/jahan/server/: CMakeLists.txt  secure_web_socket.cpp  secure_web_socket.h  socket_client.hpp  wss_endpoint_handler.cpp  wss_endpoint_handler.h
lib/jahan/signal/: CMakeLists.txt  manager.cpp  manager.h
lib/simple_webSocket_server/: CMakeLists.txt  client_ws.hpp
src/: CMakeLists.txt  app.sample.conf  main.cpp  new_file.h  old_main.cpp
src/include/db/: auth.hpp
